--- a/docs/zh/plugins/i18n.md
+++ b/docs/zh/plugins/i18n.md
@@ -49,7 +49,7 @@ new Vue({
 
 ## 局部配置
 
-有时候我们只希望在某个文件中配置这个组件的多国语言，如果所有的语言设置都放在 `d2admin-vue-element/src/i18n` 中会造成混乱，不易维护
+有时候我们只希望在某个文件中配置这个组件的多国语言，如果所有的语言设置都放在 `d2-admin/src/i18n` 中会造成混乱，不易维护
 
 `D2Admin` 已经替你安装好了 `vue-i18n-loader`，可以方便地在单文件组件中使用
 
