--- a/.github/ISSUE_TEMPLATE/------.md
+++ b/.github/ISSUE_TEMPLATE/------.md
@@ -1,12 +1,12 @@
 ---
-name: "\U0001F308 显示优化"
-about: 显示优化
+name: "⚙ 升级功能"
+about: 升级功能
 
 ---
 
 ```
 请先把下行内容复制到上面的标题框，然后删除这部分
-🌈 显示优化 | 标题
+⚙ 升级功能 | 标题
 ```
 
 如果需要，在这里描述具体内容
