--- a/.github/ISSUE_TEMPLATE/-------.md
+++ b/.github/ISSUE_TEMPLATE/-------.md
@@ -1,12 +1,12 @@
 ---
-name: "\U0001F308 显示优化"
-about: 显示优化
+name: "\U0001F4D4 文档完善"
+about: 文档完善
 
 ---
 
 ```
 请先把下行内容复制到上面的标题框，然后删除这部分
-🌈 显示优化 | 标题
+📔 文档完善 | 标题
 ```
 
 如果需要，在这里描述具体内容
