Update issue templates

--- a/.github/ISSUE_TEMPLATE/-------.md
+++ b/.github/ISSUE_TEMPLATE/-------.md
@@ -1,12 +1,13 @@
 ---
-name: "\U0001F4D4 文档完善"
-about: " 文档完善"
+name: "✏️ 其它类型"
+about: 其它类型的 issue
 
 ---
 
 ```
-请先把下行内容复制到上面的标题框，然后删除这部分
-📔 文档完善 | 标题
+请先把下面选择一个标题复制到上面的标题框，然后删除这部分
+🌈 优化显示 | 标题
+👾 BUG | 标题
 ```
 
 如果需要，在这里描述具体内容
