--- a/docs/zh/article/update/1.2.0.md
+++ b/docs/zh/article/update/1.2.0.md
@@ -342,8 +342,7 @@ this.$log.primary('primary style')
 ## 项目地址
 
 * [团队主页 https://github.com/d2-projects](https://github.com/d2-projects)
-* [中文文档 http://d2admin.fairyever.com/zh/](http://d2admin.fairyever.com/zh/)
-* [中文文档 备用 http://app.d3collection.cn/d2-admin-doc/lastest/zh/](http://app.d3collection.cn/d2-admin-doc/lastest/zh/)
+* [中文文档 http://app.d3collection.cn/d2-admin-doc/lastest/zh/](http://app.d3collection.cn/d2-admin-doc/lastest/zh/)
 * [完整版 预览地址 https://fairyever.gitee.io/d2-admin-preview/](https://fairyever.gitee.io/d2-admin-preview/)
 * [完整版 github https://github.com/d2-projects/d2-admin](https://github.com/d2-projects/d2-admin)
 * [完整版 码云 https://gitee.com/fairyever/d2-admin](https://gitee.com/fairyever/d2-admin)
