--- a/docs/zh/article/update/1.2.0.md
+++ b/docs/zh/article/update/1.2.0.md
@@ -154,7 +154,7 @@ const db = await this.$store.dispatch('d2admin/db/database', {
 const myName = db.get('myName').value()
 ```
 
-这次是使用完全一样的代码，但是 A 用户登陆的情况下取得的值是 `myName = userA`，B 用户登陆的情况下取得的值是 `myName = userB`。
+这次是使用完全一样的代码，但是 A 用户登录的情况下取得的值是 `myName = userA`，B 用户登录的情况下取得的值是 `myName = userB`。
 
 上面介绍的特性即为“用户私有”，**在 D2Admin 中，所有的数据持久化 API 都支持数据私有配置**。
 
