--- a/docs/zh/article/update/0.0.0.md
+++ b/docs/zh/article/update/0.0.0.md
@@ -26,7 +26,7 @@ D2Admin 是完全开源免费的管理系统集成方案，由 [FairyEver](https
 * 简约主题
 * 每个插件和组件都配有介绍文档
 * 图片资源 sketch 源文件（ 可以在这个文件内重新生成所有图片资源 ）
-* 登陆和注销
+* 登录和注销
 * 根据路由自动生成菜单
 * 可折叠侧边栏
 * 方便的菜单设置
